# strataregula

./: .claude-code-prompt-template.md  .coverage  .development-rules.md  .gitignore  .gitignore.security  .pre-commit-config.yaml  AGENTS.md  API_REFERENCE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLI_REFERENCE.md  CONFERENCE_PRESENTATION_MATERIALS.md  CONFIG_DUMP_FEATURE.md  CONTRIBUTING.md  Dockerfile  FINAL_COMPREHENSIVE_DIFF_v0.3.0.patch  IMPLEMENTATION_REVIEW.md  INTELLECTUAL_PROPERTY_DOCUMENTATION.md  INTELLISENSE_IMPLEMENTATION.md  LICENSE  LOCAL_WORK_SUMMARY.md  MANIFEST.in  MIGRATION_GUIDE.md  MILESTONES.md  Makefile  PLUGIN_DEVELOPMENT.md  PLUGIN_QUICKSTART.md  PR_DIFF_SUMMARY_v0.3.0.md  PR_STRATAREGULA_v0.3.0.md  PYPI_WORKFLOW.md  QA_STRATEGY.md  README.md  RELEASE_SCOPE.md  RESEARCH_PAPER_OUTLINE.md  ROADMAP.md  SYSTEM_ARCHITECTURE_UML.md  StrataRegula_Stream_Test_DIFF_2025-08-30.md  TECHNICAL_DOCUMENTATION.md  TODO.md  VISION.md  (+25 more)
.devcontainer/: devcontainer.json  post_start.sh
.githooks/: pre-push
.github/: CODEOWNERS  gitleaks.toml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md  mvp-task.md
.github/workflows/: bench-guard-nightly.yml  bench-guard.yml  benchmark.yml  claude-code-review.yml  claude-code-review.yml.disabled  cov-bump.yml  coverage-report.yml  docker-build.yml  docs.yml  flaky-rehab.yml  flaky-scan.yml  golden-metrics.yml  pypi-publish.yml  quality-checks.yml  secret-audit.yml  security.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_requirements.md
benchmarks/: cpu_locality.py  functional_speedup.py  optimized_benchmark.py  pattern_benchmark.py  perf_suite.py  performance_comparison.py  performance_comparison_results.txt  profiling_setup.py
benchmarks/results/: comprehensive_20250906_082836.json
docs/: GIT_WORKFLOW_LOCAL.md  GOLDEN_METRICS_GUARD.md  KERNEL_MODIFICATION_HISTORY.md  MIGRATION_v0.2_to_v0.3.md  ONBOARDING.md  PROJECT_CLEANUP.md  README_FOR_DEVELOPERS.md  RELEASE_CHECKLIST.md  RUN_LOGGING.md  benchmark.html  check_docs.py  index.md  requirements.txt
docs/api/: index.md
docs/api-reference/: README.md
docs/bench/: bench_guard_origin.md
docs/business/: security-saas-concept.md
docs/developer-guide/: README.md
docs/environment/: DEVCONTAINER.md  SETUP.md  TROUBLESHOOTING.md
docs/examples/: examples.md  getting-started.md  philosophy_demo.py
docs/getting-started/: README.md  first-project.md  installation.md
docs/hash/: HASH_ALGORITHM_PACKAGING_PATTERNS.md  MODERN_HASH_ARCHITECTURE_CRITIQUE.md  README.md
docs/history/: STRATAREGULA_VISION.md
docs/issues/: benchmark-extension-advanced-profiling.md  ci-complete-integration-github-actions.md  multiplatform-devcontainer-support.md  perf-analyze-root-cause-analysis-tool.md  perf-diff-baseline-comparison-tool.md  performance-engineering-complete-documentation.md  realtime-monitoring-system.md  release-0.3.0-progress.md  security-enhancement-gitleaks-integration.md
docs/javascripts/: extra.js
docs/migration/: MIGRATION_GUIDE.md  README.md
docs/patterns/: README.md  STRATAREGULA_PHILOSOPHY.md
docs/performance/: README.md  benchmarking.md  memory.md  patterns.md  powershell.md  principles.md  python.md  regression.md
docs/plugins/: doe-runner.md  plugin-development.md  plugin-integration.md
docs/releases/: STRATAREGULA_v0.3.0.md
docs/reports/: golden-metrics-design-issue-report.md  requirement-implementation-gap-analysis.md  weekly.md
docs/run/: 2025-08-30T10-03JST-devcontainer-rollout.md  2025-08-30T10-14JST-devcontainer-env-check.md  2025-08-30T19-32JST-task3-1-developer-docs-template.md  2025-08-30T20-29JST-test-deploy.md  2025-08-30T20-59JST-agents-standardization.md  2025-08-30T21-09JST-agents-wiring.md  2025-08-30T21-21JST-docs-quality-automation-deployment.md  2025-08-30T21-31JST-phase4-sustain-measure-kickoff.md  2025-08-30T21-46JST-weekly-health-bootstrap.md  2025-08-31T23-03JST-ci-fix.md  _TEMPLATE.md
docs/security/: README.md  audit-trail.md  deployment-guide.md
docs/stylesheets/: extra.css
examples/: bank_renege_simulation.py  carwash_simulation.py  hierarchy_test.py  machine_shop_simulation.py  micro_patterns.py  sample_prefectures.yaml  sample_traffic.yaml
idea/: ECOSYSTEM_VISION.md  GIT_WORKFLOW.md  NEXT_RELEASE.md  PLUGIN_HOOK_DESIGN.md  PROJECT_STATUS.md  README.md  future_concepts.md  technical_experiments.md
notebooks/: benchmark_results.html  benchmark_results.ipynb
performance/: __init__.py
reports/: .gitkeep  FINAL_DIFF_STATS_v0.3.0.txt  PR_DIFF_v0.3.0.patch  README.md  RFC_v0.4.0_ASYNC_DISTRIBUTED.md
scripts/: __init__.py  analyze_metrics.py  bench_guard.py  bench_guard.schema.json  bench_integration.py  bench_reporter.py  ci_workflow_patch.yml  config_interning.py  convert_notebook.py  generate_benchmark_images.py  golden_capture.py  perf_analyzer.ps1  run_benchmarks.py  test_visualization_system.py  whereami.bat  whereami.sh
strataregula/: __init__.py  kernel.py  py.typed
superclaude/: __init__.py  core.py
templates/: benchmark_template.py
test_output/: cli_output.json  metrics.json
test_output2/: cli_output.json  metrics.json
test_output3/: cli_output.json  metrics.json
test_output4/: metrics.json
test_output6/: metrics.json
test_output7/: cli_output.json  metrics.json
test_output8/: metrics.json
tests/: __init__.py  conftest.py  test_hierarchy_simple.py  test_integration.py  test_json_basic.py  test_json_simple.py  test_kernel.py  test_kernel_precompile.py  test_philosophy_guard.py  test_runner.py
tools/: diagnose_golden_metrics.py  flaky_scan.py  new_run_log.py  perf_reporter.py  runlog.py
uml_diagrams/: Communication_Protocol.html  Core_Data_Structures.html  Deployment_Diagram.html  IntelliSense_Completion_Flow.html  Pattern_Learning_Sequence.html  Pattern_Learning_States.html  Performance_Analysis.html  Security_Architecture.html  StrataRegula_Component_Architecture.html  System_Extensibility.html  YAML_Analysis_Activity.html  index.html
(+159 files in other folders)
